--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "author": "First Last <first.last@example.com>",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "start": "node testing.js"
   },
   "dependencies": {
     "express": "^4.16.1",
