--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1"
