--- a/web/package.json
+++ b/web/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "web",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "My webpack project",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve --config ./webpack.config.js",
+    "build": "webpack --config ./webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.1.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "webpack": "^5.10.0"
   },
   "browserslist": {
     "production": [
@@ -29,5 +30,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "@webpack-cli/init": "^1.0.3",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.2",
+    "script-loader": "0.7.2",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
