--- a/api/package.json
+++ b/api/package.json
@@ -5,10 +5,10 @@
   "author": "First Last <first.last@example.com>",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
     "start": "node testing.js"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "express": "^4.16.1",
     "mysql": "^2.18.1"
   }
